Improve public holiday api